--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.0.0"
 description = "Auto updates project packages and venv."
 readme = "https://github.com/Brown-University-Library/requirements-auto-updater/blob/main/README.md"
 requires-python = ">=3.12,<3.13"
-dependencies = []
+dependencies = [
+    "python-dotenv~=1.2.0"
+]
 
 [dependency-groups]
 local = []
